Fix the layout issue, style inputs

--- a/style.css
+++ b/style.css
@@ -15,18 +15,18 @@ body{
 }
 
 #container{
-    display: grid;
-    grid-template-columns: 400px auto;
+    display:flex;
 }
 
 /* left side */
-.full-picture {
-    width:400px;
+.image-side {
+    width: 400px;
 }
 
 .full-picture > img {
-    width:100%;
-    display:block; /*remove white space under an image*/
+    width:400px;
+    height: 100vh;
+    display:block;
 }
 
 .logo{
@@ -66,29 +66,31 @@ body{
 
 /* right side */
 
-.text-side>:nth-child(odd){
+.text-side div:nth-child(odd){
     background-color: rgb(228, 220, 220);
 }
 
 .title{
-    padding: 60px 30px 20px 0; 
+    padding: 70px 50px 30px 0; 
 
     font-size:1.2rem;
     font-weight: bold;
+
 }
 
 .forms{
-    padding:10px 100px;
+    padding:20px 100px;
+}
+
+.create-account{
+    box-shadow: 2px 0 5px blue; /*light shadow between form div and button div*/
 }
 
 .title,
 .create-account,
 .forms {
     padding-left:30px;
-    height:33.3vh;
 }
-
-
 
 capture{
     font-weight: bold;
@@ -112,12 +114,34 @@ li>input {
     width: 200px;
     line-height: 20px;
     margin-bottom: 10px;
+    padding:2px 5px;
+
+    appearance: none;
+    border: 2px solid #E5E7EB;
+    border-radius: 5px;
+
+    font-family: inherit;
+    font-size: 100%;
+}
+
+li>input:focus{
+    outline: none;
+    border:2px solid blue;
+    box-shadow: 2px 2px 5px grey;
 }
 
 li>label{
     font-size: 0.8rem;
     opacity: 0.8;
 }
+
+input[class="error"]{
+    border:2px solid red;
+}
+
+/* input[class="validated"]{
+    border:2px solid green;
+} */
 
 .create-account button{
     margin:20px 0;
@@ -129,3 +153,18 @@ li>label{
     color:white;
     text-align: center;
 }
+
+.create-account a {
+    color:#596D48;
+    text-decoration: none;
+}
+
+.create-account {
+    flex:1;
+}
+
+.text-side{
+    display: flex;
+    flex-direction: column;
+}
+
